--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
 
         </h1>
     </section>
+   
+   
+    <div class="flex flex-space-evenly">
+        <div class="item" style="color: red ;" > <img src="images/1.png" alt="" class="hi"> <br><p>An environment catering to creative minds, providing the framework for ambitious and sustainable communities. BDD creates a community for collaboration, facilitates the sharing of ideas and connects decision makers with entrepreneurs.</p></div>
+        <div class="item" style="color: red ;"> <img src="images/1.png" alt="" class="hi"><p>A business district providing value added services and cutting edge facilities for developing, producing and exchanging innovative tools and applications.</p></div>
+        <div class="item" style="color: red ;"> <img src="images/1.png" alt="" class="hi"><p>A new urban topography that reflects the creative community with innovative and ground breaking architecture seamlessly integrating the latest technological solutions.</p></div>
+        <div class="item" style="color: red ;"> <img src="images/1.png" alt="" class="hi"><p>An urban environment focused on minimizing primary energy consumption and reducing the impact of the built environment on human health and nature, with the aim of achieving LEED silver rating.</p></div>
+        <div class="item" style="color: red ;"> <img src="images/1.png" alt="" class="hi"><p>A high tech and high quality environment that allows new ways of working and promotes change for more flexible work practices and lifestyles.</p></div>
+    </div>
 
 
     
